proxy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy
spec:
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      imagePullSecrets:
        - name: docker-hub
      containers:
        - name: proxy
          image: mindmatrix/proxy:1.0.4
          ports:
            - containerPort: 4181
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
      volumes:
        - name: config-volume
          configMap:
            name: proxy-config
