proxy/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
spec:
  selector:
    app: proxy
  ports:
    - port: 4181
      targetPort: 4181
  type: ClusterIP
